--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "author": "David Kirkman",
   "license": "AGPL-3.0",
-  "dependencies": {},
+  "dependencies": {
+    "chroma-js": "^1.3.7"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
